Work on Radiotracers.html and radiotracers.js

--- a/src/main/resources/static/radiotracers.html
+++ b/src/main/resources/static/radiotracers.html
@@ -32,183 +32,180 @@
 </head>
 
 <body>
-<div id="wrapper">
+    <div id="wrapper">
 
-    <!-- Navigation DO NOT TOUCH -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">Nuclibook&nbsp;&nbsp;&nbsp;&nbsp;|</a>
-            <a class="navbar-brand" href="radiotracers.html"> Radiotracers </a>
-        </div>
-        <!-- Top Menu Items -->
-        <ul class="nav navbar-right top-nav">
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b
-                        class="caret"></b></a>
-                <ul class="dropdown-menu message-dropdown">
-                    <li class="message-preview">
-                        <a href="#">
-                            <div class="media">
+        <!-- Navigation DO NOT TOUCH -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Nuclibook&nbsp;&nbsp;&nbsp;&nbsp;|</a>
+                <a class="navbar-brand" href="radiotracers.html"> Radiotracers </a>
+            </div>
+            <!-- eND Brand -->
+
+            <!-- Top Menu Items -->
+            <ul class="nav navbar-right top-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+                    <ul class="dropdown-menu message-dropdown">
+                        <li class="message-preview">
+                            <a href="#">
+                                <div class="media">
                                     <span class="pull-left">
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
+                                    <div class="media-body">
+                                        <h5 class="media-heading"><strong>USERNAME</strong>
+                                        </h5>
 
-                                <div class="media-body">
-                                    <h5 class="media-heading"><strong>USERNAME</strong>
-                                    </h5>
+                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
 
-                                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="message-footer">
-                        <a href="#">Read All New Messages</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b
-                        class="caret"></b></a>
-                <ul class="dropdown-menu alert-dropdown">
-                    <li>
-                        <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#">View All</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> USERNAME <b
-                        class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav side-nav">
-                <li>
-                    <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                            </a>
+                        </li>
+                        <li class="message-footer">
+                            <a href="#">Read All New Messages</a>
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <a href="appointments.html"><i class="fa fa-fw fa-clock-o"></i> Appointments</a>
-                </li>
-                <li>
-                    <a href="orders.html"><i class="fa fa-fw fa-truck"></i> Orders</a>
-                </li>
-                <li>
-                    <a href="patients.html"><i class="fa fa-fw fa-group"></i> Patients</a>
-                </li>
-                <li>
-                    <a href="radiographers.html"><i class="fa fa-fw fa-stethoscope"></i> Radiographers</a>
-                </li>
-                <li class="active">
-                    <a href="radiotracers.html"><i class="fa fa-fw fa-flask"></i> Radiotracers</a>
-                </li>
-                <li>
-                    <a href="cameras.html"><i class="fa fa-fw fa-camera"></i> Cameras</a>
-                </li>
-                <li>
-                    <a href="Therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
-                </li>
-                <li>
-                    <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i>
-                        Users <i class="fa fa-fw fa-caret-down"></i></a>
-                    <ul id="demo" class="collapse">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
+                    <ul class="dropdown-menu alert-dropdown">
                         <li>
-                        <li>
-                            <a href="activity.html"><i class="fa fa-fw fa-list"></i> Activity Log</a>
+                            <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
                         </li>
                         <li>
-                            <a href="settings.html"><i class="fa fa-fw fa-database"></i> Admin Settings</a>
+                            <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#">View All</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> USERNAME <b
+                            class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
             </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </nav>
-    <!-- END OF Navigation - DO NOT TOUCH -->
-
-    <div id="page-wrapper">
-
-        <div class="container-fluid">
-
-            <!-- START Page Heading -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">
-                        Medicines <!-- <small>Overview</small> -->
-                    </h1>
-                </div>
+            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav side-nav">
+                    <li>
+                        <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                    </li>
+                    <li>
+                        <a href="appointments.html"><i class="fa fa-fw fa-clock-o"></i> Appointments</a>
+                    </li>
+                    <li>
+                        <a href="orders.html"><i class="fa fa-fw fa-truck"></i> Orders</a>
+                    </li>
+                    <li>
+                        <a href="patients.html"><i class="fa fa-fw fa-group"></i> Patients</a>
+                    </li>
+                    <li>
+                        <a href="radiographers.html"><i class="fa fa-fw fa-stethoscope"></i> Radiographers</a>
+                    </li>
+                    <li class="active">
+                        <a href="radiotracers.html"><i class="fa fa-fw fa-flask"></i> Radiotracers</a>
+                    </li>
+                    <li>
+                        <a href="cameras.html"><i class="fa fa-fw fa-camera"></i> Cameras</a>
+                    </li>
+                    <li>
+                        <a href="Therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i>Users <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="demo" class="collapse">
+                            <li>
+                                <a href="activity.html"><i class="fa fa-fw fa-list"></i> Activity Log</a>
+                            </li>
+                            <li>
+                                <a href="settings.html"><i class="fa fa-fw fa-database"></i> Admin Settings</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-            <!-- /.row /END Page Heading-->
+            <!-- /.navbar-collapse -->
+        </nav>
+        <!-- END OF Navigation - DO NOT TOUCH -->
 
-            <!-- START Medicine table -->
-            <div class="row">
-                <div class="col-lg-12 col-md-12">
-                    <table class="table table-bordered table-hover">
-                        <thead>
-                        <tr>
-                            <td class="col-lg-2 text-center"><b>ID</b></td>
-                            <td class="col-lg-2 text-center"><b>Name of Medicine</b></td>
-                            <td class="col-lg-2 text-center"><b>Time to be delivered</b></td>
-                        </tr>
-                        </thead>
+        <div id="page-wrapper">
 
-                        <tbody>
-                        #[collection: medicines]
+            <div class="container-fluid">
 
-                        #[pre]#[/pre]
+                <!-- START Page Heading -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">
+                            Medicines <!-- <small>Overview</small> -->
+                        </h1>
+                    </div>
+                </div>
+                <!-- /.row /END Page Heading-->
 
-                        #[each]
-                        <tr>
-                            <td>#id</td>
-                            <td>#name</td>
-                            <td>#orderTime</td>
-                            <td>
-                                <button class="btn edit-button" data-id="#id">Edit</button>
-                                <button class="btn delete-button" data-id="#id">Delete</button>
+                <!-- START Medicine table -->
+                <div class="row">
+                    <div class="col-lg-12 col-md-12">
+                        <table class="table table-bordered table-hover">
+                            <thead>
+                            <tr>
+                                <td class="col-lg-2 text-center"><b>ID</b></td>
+                                <td class="col-lg-2 text-center"><b>Name of Medicine</b></td>
+                                <td class="col-lg-2 text-center"><b>Time to be delivered</b></td>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+                            #[collection: medicines]
+
+                            #[pre]#[/pre]
+
+                            #[each]
+                            <tr>
+                                <td>#id</td>
+                                <td>#name</td>
+                                <td>#orderTime</td>
+                                <td>
+                                    <button class="btn edit-button" data-id="#id">Edit</button>
+                                    <button class="btn delete-button" data-id="#id">Delete</button>
                             </td>
                         </tr>
                         #[/each]
