--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -191,7 +191,7 @@
                     <a href="cameras.html"><i class="fa fa-fw fa-camera"></i> Cameras</a>
                 </li>
                 <li>
-                    <a href="Therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
+                    <a href="therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
                 </li>
                 <li>
                     <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i>
