--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,36 +1,40 @@
-<!-- TODO: this needs to be replaced with the actual login page -->
 #[def: title = Login Page]
+#[def: current-page = login]
 ##_header.html
+<div class="row">
+	<div class="col-lg-12 col-md-12">
 		<form action="/login" method="post">
 			#[!if: stage = 2]
-				#[if: error-bad-staff-id]
-					<div class="note note-danger">
-						<p><strong>Error:</strong> that staff ID wasn't recognised - are you sure you have an account?</p>
-					</div>
-				#[/if]
-				#[if: error-bad-password]
-					<div class="note note-danger">
-						<p><strong>Error:</strong> incorrect password.</p>
-					</div>
-				#[/if]
-				#[if: error-bad-status]
-					<div class="note note-danger">
-						<p><strong>Error:</strong> your account is currently disabled.</p>
-					</div>
-				#[/if]
-				<div class="form-group">
-					<label for="username">Enter your ID below and press enter, or scan your ID card.</label>
-					<input type="text" name="username" id="username" value="#username"/>
-				</div>
+			#[if: error-bad-staff-id]
+			<div class="note note-danger">
+				<p><strong>Error:</strong> that staff ID wasn't recognised - are you sure you have an account?</p>
+			</div>
+			#[/if]
+			#[if: error-bad-password]
+			<div class="note note-danger">
+				<p><strong>Error:</strong> incorrect password.</p>
+			</div>
+			#[/if]
+			#[if: error-bad-status]
+			<div class="note note-danger">
+				<p><strong>Error:</strong> your account is currently disabled.</p>
+			</div>
+			#[/if]
+			<div class="form-group">
+				<label for="username">Enter your ID below and press enter, or scan your ID card.</label>
+				<input type="text" name="username" id="username" value="#username"/>
+			</div>
 			#[/if]
 
 			#[if: stage = 2]
-				<input type="hidden" name="username" value="#username"/>
-				<p>Hello, <strong>#staffname</strong>.</p>
-				<div class="form-group">
-					<label for="password">Please enter your password or PIN and press enter.</label>
-					<input type="password" name="password" id="password"/>
-				</div>
+			<input type="hidden" name="username" value="#username"/>
+			<p>Hello, <strong>#staffname</strong>.</p>
+			<div class="form-group">
+				<label for="password">Please enter your password or PIN and press enter.</label>
+				<input type="password" name="password" id="password"/>
+			</div>
 			#[/if]
 		</form>
+	</div>
+</div>
 ##_footer.html
