Changed to "activity" -> "action"; removed unused sidebar

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -104,8 +104,8 @@
 						<li#[if: current-page = therapies] class="active"#[/if]>
 							<a href="/therapies"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
 						</li>
-						<li#[if: current-page = activity-log] class="active"#[/if]>
-							<a href="/activity-log"><i class="fa fa-fw fa-list"></i> Activity Log</a>
+						<li#[if: current-page = action-log] class="active"#[/if]>
+							<a href="/action-log"><i class="fa fa-fw fa-list"></i> Action Log</a>
 						</li#[if: current-page = settings] class="active"#[/if]>
 						<li>
 							<a href="/settings"><i class="fa fa-fw fa-database"></i> Admin Settings</a>
