Fixed staff link

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -93,7 +93,7 @@
 							<a href="/patients"><i class="fa fa-fw fa-group"></i> Patients</a>
 						</li>
 						<li#[if: current-page = radiographers] class="active"#[/if]>
-							<a href="/radiographers"><i class="fa fa-fw fa-stethoscope"></i> Staff</a>
+							<a href="/staff"><i class="fa fa-fw fa-stethoscope"></i> Staff</a>
 						</li>
 						<li#[if: current-page = medicines] class="active"#[/if]>
 							<a href="/medicines"><i class="fa fa-fw fa-flask"></i> Medicines</a>
