--- a/src/main/resources/static/_footer.html
+++ b/src/main/resources/static/_footer.html
@@ -1,10 +1,11 @@
 </div>
 </div>
 </div>
-<script src="/js/therapies.js"></script>
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 #[if: crud]
-<script src="/js/crud-page.js"></script>#[/if]
+<script src="/js/plugins/bootstrap-toastr/toastr.min.js"></script>
+<script src="/js/crud-page.js"></script>
+#[/if]
 </body>
 </html>
