Implemented table styles on staff page

--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -8,12 +8,12 @@
 		<table class="table table-bordered table-hover">
 			<thead>
 				<tr>
-					<th class="col-lg-3 text-center">Name</th>
-					<th class="col-lg-2 text-center">Default Duration</th>
-					<th class="col-lg-2 text-center">Medicine Required</th>
-					<th class="col-lg-2 text-center">Medicine Dose</th>
-					<th class="col-lg-2 text-center">Camera Required</th>
-					<th class="col-lg-1 text-center">Actions</th>
+					<th class="text-center">Name</th>
+					<th class="text-center">Default Duration</th>
+					<th class="text-center">Medicine Required</th>
+					<th class="text-center">Medicine Dose</th>
+					<th class="text-center">Camera Required</th>
+					<th class="text-center">Actions</th>
 				</tr>
 			</thead>
 
@@ -51,7 +51,7 @@
 		</table>
 
 		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add therapy</button>
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Therapy</button>
 		</div>
 	</div>
 </div>
