--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -1,337 +1,94 @@
-<!DOCTYPE html>
-<html lang="en">
+#[def: title = Staff Management]
+#[def: current-page = staff]
+#[def: crud = yes]
 
-<head>
+##_header.html
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<div class="row">
+	<div class="col-lg-12 col-md-12">
+		<table class="table table-bordered table-hover">
+			<thead>
+				<tr>
+					<th class="text-center">ID</th>
+					<th class="text-center">Camera Type</th>
+					<th class="text-center">Room Number</th>
+					<th class="text-center">Actions</th>
+				</tr>
+			</thead>
 
-    <title>NHS Nuclear Medicine Booking System</title>
+			<tbody>
+				#[collection: cameras]
 
-    <!-- Bootstrap Core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+				#[pre]#[/pre]
 
-    <!-- Custom CSS -->
-    <link href="/css/sb-admin.css" rel="stylesheet">
+				#[each]
+				<tr>
+					<td>#id</td>
+					<td>#type</td>
+					<td>#roomNumber</td>
+					<td>
+						<button class="btn edit-button" data-id="#id">Edit</button>
+						<button class="btn delete-button" data-id="#id">Delete</button>
+					</td>
+				</tr>
+				#[/each]
 
-    <!-- Morris Charts CSS -->
-    <link href="/css/plugins/morris.css" rel="stylesheet">
+				#[post]#[/post]
 
-    <!-- Custom Fonts -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+				#[empty]
+				<tr>
+					<td class="text-center" colspan="4"><strong>No cameras.</strong></td>
+				</tr>
+				#[/empty]
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="fhttps://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+				#[/collection]
+			</tbody>
+		</table>
 
-</head>
-
-<body>
-
-<div id="wrapper">
-
-    <!-- Navigation DO NOT TOUCH -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">Nuclibook &nbsp;&nbsp;&nbsp;&nbsp;|</a>
-            <a class="navbar-brand" href="cameras.html"> Cameras </a>
-        </div>
-        <!-- Top Menu Items -->
-        <ul class="nav navbar-right top-nav">
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b
-                        class="caret"></b></a>
-                <ul class="dropdown-menu message-dropdown">
-                    <li class="message-preview">
-                        <a href="#">
-                            <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                    </span>
-
-                                <div class="media-body">
-                                    <h5 class="media-heading"><strong>USERNAME</strong>
-                                    </h5>
-
-                                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="message-preview">
-                        <a href="#">
-                            <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                    </span>
-
-                                <div class="media-body">
-                                    <h5 class="media-heading"><strong>USERNAME</strong>
-                                    </h5>
-
-                                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="message-preview">
-                        <a href="#">
-                            <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                    </span>
-
-                                <div class="media-body">
-                                    <h5 class="media-heading"><strong>USERNAME</strong>
-                                    </h5>
-
-                                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="message-footer">
-                        <a href="#">Read All New Messages</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b
-                        class="caret"></b></a>
-                <ul class="dropdown-menu alert-dropdown">
-                    <li>
-                        <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-                    </li>
-                    <li>
-                        <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#">View All</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> USERNAME <b
-                        class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav side-nav">
-                <li>
-                    <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
-                </li>
-                <li>
-                    <a href="appointments.html"><i class="fa fa-fw fa-clock-o"></i> Appointments</a>
-                </li>
-                <li>
-                    <a href="orders.html"><i class="fa fa-fw fa-truck"></i> Orders</a>
-                </li>
-                <li>
-                    <a href="patients.html"><i class="fa fa-fw fa-group"></i> Patients</a>
-                </li>
-                <li>
-                    <a href="radiographers.html"><i class="fa fa-fw fa-stethoscope"></i> Radiographers</a>
-                </li>
-                <li>
-                    <a href="radiotracers.html"><i class="fa fa-fw fa-flask"></i> Radiotracers</a>
-                </li>
-                <li class="active">
-                    <a href="cameras.html"><i class="fa fa-fw fa-camera"></i> Cameras</a>
-                </li>
-                <li>
-                    <a href="therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
-                </li>
-                <li>
-                    <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i>
-                        Users <i class="fa fa-fw fa-caret-down"></i></a>
-                    <ul id="demo" class="collapse">
-                        <li>
-                            <a href="activity.html"><i class="fa fa-fw fa-list"></i> Activity Log</a>
-                        </li>
-                        <li>
-                            <a href="settings.html"><i class="fa fa-fw fa-database"></i> Admin Settings</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </nav>
-    <!-- END OF Navigation - DO NOT TOUCH -->
-
-    <div id="page-wrapper">
-
-        <div class="container-fluid">
-
-            <!-- Page Heading -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">
-                        Cameras
-                    </h1>
-                </div>
-            </div>
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-12 col-md-12">
-                    <table class="table table-bordered table-hover">
-                        <thead>
-                        <tr>
-                            <td class="col-lg-1 text-center"><b>ID</b></td>
-                            <td class="col-lg-3 text-center"><b>Camera Type</b></td>
-                            <td class="col-lg-2 text-center"><b>Room Number</b></td>
-                            <td class="col-lg-1 text-center"><b>Action</b></td>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        #[collection: cameras]
-
-                        #[pre]#[/pre]
-
-                        #[each]
-                        <tr>
-                            <td>#id</td>
-                            <td>#type</td>
-                            <td>#roomNumber</td>
-                            <td>
-                                <button class="btn edit-button" data-id="#id">Edit</button>
-                                <button class="btn delete-button" data-id="#id">Delete</button>
-                            </td>
-                        </tr>
-                        #[/each]
-
-                        #[post]#[/post]
-
-                        #[empty]
-                        <tr>
-                            <td class="text-center" colspan="4"><b><u>No cameras.</u></b></td>
-                        </tr>
-                        #[/empty]
-                        #[/collection]
-                        </tbody>
-                    </table>
-
-                    <div class="text-right">
-                        <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add
-                            camera
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.row -->
-        <div class="modal hide fade edit-modal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="edit-mode">Edit Camera</h3>
-
-                        <h3 class="create-mode text-center">Create new Camera</h3>
-                    </div>
-                    <div class="modal-body">
-                        <form class="edit-form form-inline text-center">
-                            <input type="hidden" name="entity-type" value="camera"/>
-                            <input type="hidden" name="entity-id" value="0"/>
-
-                            <div class="form-group text-center">
-                                <label for="type">Type: </label>
-                                <input class="form-control input-lg" type="text" name="name" id="type"/>
-                            </div>
-                            <div class="form-group text-center">
-                                <label for="roomNumber">Room Number: </label>
-                                <input class="form-control input-lg" type="text" name="name" id="roomNumber"/>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-cancel">Cancel</button>
-                        <button type="button" class="btn btn-primary btn-save">Ok</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        #[def: entity-name-title = Camera]
-        #[def: entity-name-body = camera]
-        #[def: entity-type = camera]
-
-        ##_delete-modal.html
-        ##_loading-modal.html
-
-        #[collectionmap: objectMap: cameras]
-        #[def: crud = yes]
-        ##_footer.html
-
-    </div>
-    <!-- /#page-wrapper -->
-
+		<div class="text-right">
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera</button>
+		</div>
+	</div>
 </div>
-<!-- /#wrapper -->
 
-<!-- jQuery -->
-<script src="/js/jquery.js"></script>
+<div class="modal hide fade edit-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3 class="edit-mode">Edit Camera</h3>
+				<h3 class="create-mode text-center">Add Camera</h3>
+			</div>
+			<div class="modal-body">
+				<form class="edit-form form-inline text-center">
+					<input type="hidden" name="entity-type" value="camera"/>
+					<input type="hidden" name="entity-id" value="0"/>
+					<div class="form-group text-center">
+						<label for="type">Type: </label>
+						<input class="form-control input-lg" type="text" name="name" id="type"/>
+					</div>
+					<div class="form-group text-center">
+						<label for="roomNumber">Room Number: </label>
+						<input class="form-control input-lg" type="text" name="name" id="roomNumber"/>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-cancel">Cancel</button>
+				<button type="button" class="btn btn-primary btn-save">Ok</button>
+			</div>
+		</div>
+	</div>
+</div>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="/js/bootstrap.min.js"></script>
-
-<!-- Morris Charts JavaScript -->
-<script src="/js/plugins/morris/raphael.min.js"></script>
-<script src="/js/plugins/morris/morris.min.js"></script>
-<script src="/js/plugins/morris/morris-data.js"></script>
-
-<!-- Own Script -->
 <script src="/js/cameras.js"></script>
 
-</body>
+#[def: entity-name-title = Camera]
+#[def: entity-name-body = camera]
+#[def: entity-type = camera]
 
-</html>
+##_delete-modal.html
+##_loading-modal.html
+
+#[collectionmap: objectMap: cameras]
+
+##_footer.html
