Finished camera route implementation

--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -1,5 +1,5 @@
-#[def: title = Staff Management]
-#[def: current-page = staff]
+#[def: title = Camera Management]
+#[def: current-page = cameras]
 #[def: crud = yes]
 
 ##_header.html
