Headers/footers on medicines

--- a/src/main/resources/static/activity.html
+++ b/src/main/resources/static/activity.html
@@ -171,7 +171,7 @@
                     <a href="radiographers.html"><i class="fa fa-fw fa-stethoscope"></i> Radiographers</a>
                 </li>
                 <li>
-                    <a href="radiotracers.html"><i class="fa fa-fw fa-flask"></i> Radiotracers</a>
+                    <a href="medicines.html"><i class="fa fa-fw fa-flask"></i> Radiotracers</a>
                 </li>
                 <li>
                     <a href="cameras.html"><i class="fa fa-fw fa-camera"></i> Cameras</a>
