--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -8,16 +8,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>#title</title>
-		<link href="/css/bootstrap.min.css" rel="stylesheet"/>
-		<link href="/css/sb-admin.css" rel="stylesheet"/>
-		<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+		<link href="/css/core/bootstrap.min.css" rel="stylesheet"/>
+		<link href="/css/core/sb-admin.css" rel="stylesheet"/>
+		<link href="/css/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 		#[if: crud]
-		<link href="/js/plugins/bootstrap-toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
+		<link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
 		#[/if]
 
 		<!--[if lt IE 9]>
-		<script src="/js/html5shiv.js"></script>
-		<script src="/js/respond.min.js"></script>
+		<script src="/js/core/html5shiv.js"></script>
+		<script src="/js/core/respond.min.js"></script>
 		<![endif]-->
 
 	</head>
