--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -61,21 +61,16 @@
 						</ul>
 					</li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> USERNAME
-							<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>
+							USERNAME
+							<b class="caret"></b>
+						</a>
 						<ul class="dropdown-menu">
 							<li>
 								<a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
 							</li>
 							<li>
-								<a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-							</li>
-							<li>
-								<a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-							</li>
-							<li class="divider"></li>
-							<li>
-								<a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+								<a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
 							</li>
 						</ul>
 					</li>
