--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -25,8 +25,8 @@
 				<tr>
 					<td>#id</td>
 					<td>#name</td>
-					<td>#hospitalNumber</td>
-					<td>#dateOfBirth</td>
+					<td>#hospital-number</td>
+					<td>#date-of-birth</td>
 					<td>
 						<button class="btn edit-button" data-id="#id">Edit</button>
 						<button class="btn delete-button" data-id="#id">Delete</button>
@@ -39,7 +39,7 @@
 
 				#[empty]
 				<tr>
-					<td colspan="6">No Patients</td>
+					<td colspan="5">No Patients</td>
 				</tr>
 				#[/empty]
 
@@ -75,12 +75,12 @@
 						<input type="text" name="name" id="name"/>
 					</div>
 					<div class="form-group text-center">
-						<label for="hospitalNumber">Hospital Number:</label>
-						<input type="text" name="hospitalNumber" id="hospitalNumber"/>
+						<label for="hospital-number">Hospital Number:</label>
+						<input type="text" name="hospital-number" id="hospital-number"/>
 					</div>
 					<div class="form-group text-center">
-						<label for="dateOfBirth">Date of Birth:</label>
-						<input type="text" name="dateOfBirth" id="dateOfBirth"/>
+						<label for="date-of-birth">Date of Birth:</label>
+						<input type="text" name="date-of-birth" id="date-of-birth"/>
 					</div>
 				</form>
 			</div>
