Added javascript for staff roles

--- a/src/main/resources/static/staffrole.html
+++ b/src/main/resources/static/staffrole.html
@@ -45,8 +45,7 @@
             </tbody>
         </table>
         <div class="text-right">
-            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Assign role to
-                sraff
+            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role
             </button>
         </div>
     </div>
@@ -102,6 +101,8 @@
 
 </div>
 
+<script src="/js/staffrole.js"></script>
+
 #[def: entity-name-title = Staff Member]
 #[def: entity-name-body = staff member]
 #[def: entity-type = staff]
@@ -112,3 +113,4 @@
 #[collectionmap: objectMap: staff]
 
 ##_footer.html
+
