Minor tweaks to both the JS and HTML file

--- a/src/main/resources/static/staffrole.html
+++ b/src/main/resources/static/staffrole.html
@@ -10,7 +10,7 @@
             <thead>
 
             <tr>
-                <th class="text-center">Role Name</th>
+                <th class="text-center">Staff Role</th>
                 <th class="text-center">Permission</th>
                 <th class="text-center">Actions</th>
             </tr>
