Fixed some bugs

--- a/src/main/resources/static/staffrole.html
+++ b/src/main/resources/static/staffrole.html
@@ -103,8 +103,8 @@
 
 <script src="/js/staffrole.js"></script>
 
-#[def: entity-name-title = Staff Member]
-#[def: entity-name-body = staff member]
+#[def: entity-name-title = Staff Role]
+#[def: entity-name-body = staff role]
 #[def: entity-type = staff]
 
 ##_delete-modal.html
